Bug 766227 - More nsSVGIntegrationUtils cleanup and commenting to make it a lot easier to understand. r=longsonr.

--HG--
extra : rebase_source : fab6126eac4f1135562e1b2404bf5c52d0500344